<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/background"
    android:id="@+id/backColorShow"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorblack"
        android:footerDividersEnabled="false"

        android:id="@+id/IvPuzzle">

    </GridView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:layout_below="@+id/IvPuzzle"
        android:id="@+id/counters">
        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="center"
            android:background="@drawable/button_frame">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps_number"
                android:textSize="20sp"

                android:id="@+id/numberSteps">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                android:id="@+id/stepCounterTV">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/button_frame"
            android:layout_marginStart="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_record"
                android:textSize="20sp"
                android:id="@+id/bestRecord">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                android:id="@+id/bestRecordTV">

            </TextView>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/options"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/counters">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:text="@string/shuffle"
            android:background="@drawable/button_frame"
            android:id="@+id/btnShuffle">

        </Button>
        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:background="@drawable/button_frame"
            android:src="@drawable/ic_replay_black_24dp"
            android:layout_marginStart="20dp"
            android:scaleType="center"
            android:id="@+id/btnRefresh"
            >

        </ImageView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:text="@string/options"
            android:background="@drawable/button_frame"
            android:id="@+id/btnOptions">

        </Button>
    </LinearLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:src="@drawable/greatjobtrans"
        android:id="@+id/victoryIV"
        android:alpha="0"
        android:layout_marginTop="200dp">

    </ImageView>
    <ImageView
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:id="@+id/arrow_4"
        android:src="@drawable/arrow"
        android:rotation="270"
        android:layout_above="@+id/options"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="20dp"
        android:alpha="0">

    </ImageView>

</RelativeLayout>